--- a/p8105_hw6_kdt2119.md
+++ b/p8105_hw6_kdt2119.md
@@ -291,3 +291,107 @@ other two models (model2 and model3). This shows that my model is a
 better fit for the data than the two other models. Model 2 (the model
 that without interaction terms) has the highest RMSE, suggesting that of
 the three models, it is the worst fitting model for the data.
+
+## Problem 2
+
+**The code chunk below will perform the following function: Import the
+weather dataset.**
+
+``` r
+weather_df = 
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2017-01-01",
+    date_max = "2017-12-31") %>%
+  mutate(
+    name = recode(id, USW00094728 = "CentralPark_NY"),
+    tmin = tmin / 10,
+    tmax = tmax / 10) %>%
+  select(name, id, everything())
+```
+
+**The code chunk below will perform the following function: Use 5000
+bootstrap samples and, for each bootstrap sample, produce estimates of
+*r̂*<sup>2</sup> and log (*β̂*<sub>0</sub> \* *β̂*<sub>1</sub>)**
+
+``` r
+set.seed(10)
+weather_df2 =
+weather_df %>% 
+  modelr::bootstrap(n = 5000) %>% 
+  mutate(
+    models = map(strap, ~ lm(tmax ~ tmin, data = .x)),
+    glance = map(models, broom::glance),
+    results = map(models, broom::tidy)) %>%
+  unnest(results) %>%
+  unnest(glance, names_repair = "universal") %>%
+  select(strap, .id, models, r.squared, term, estimate)
+weather_df3 = 
+  weather_df2 %>%
+  mutate(term = if_else(term != "tmin", "Intercept", "tmin"))
+wide_weather_df = 
+  weather_df3 %>%
+  select(term, estimate, .id, r.squared) %>%
+  pivot_wider(
+    names_from = "term",
+    values_from = "estimate"
+  ) 
+weather_df4 = 
+wide_weather_df %>%
+  mutate(logb0b1 = log(Intercept) + log(tmin)) %>%
+  select(.id, r.squared, logb0b1) 
+```
+
+**The code chunk below will perform the following function:Plot the
+distribution of the estimates.**
+
+``` r
+weather_df4 %>%
+  ggplot(aes(x = r.squared)) + 
+  geom_density(color = "#6D58B0", size = 1) +
+  labs(x = "R Squared", y = "Density") +
+  ggtitle("Distribution of R Squared Values for 5,000 Bootstrap Samples") +
+  theme_minimal() +
+  theme(plot.title = element_text(hjust = 0.5)) 
+```
+
+![](p8105_hw6_kdt2119_files/figure-gfm/weather_df_plots-1.png)<!-- -->
+
+``` r
+weather_df4 %>%
+  ggplot(aes(x = logb0b1)) + 
+  geom_density(color = "#6D58B0", size = 1) +
+  labs(x = "Log (Beta 0 * Beta 1)", y = "Density") +
+  ggtitle("Distribution of Log(Beta 0 * Beta 1) for 5,000 Bootstrap Samples") +
+  theme_minimal() +
+  theme(plot.title = element_text(hjust = 0.5)) 
+```
+
+![](p8105_hw6_kdt2119_files/figure-gfm/weather_df_plots-2.png)<!-- -->
+
+Both plots have an approximately normal distribution. The plot of
+log (*β̂*<sub>0</sub> \* *β̂*<sub>1</sub>) is centered around 2.01 and
+that of *r̂*<sup>2</sup> is centered around 0.91.
+
+**The code chunk below will perform the following function: Identify the
+2.5% and 97.5% quantiles to provide 95% confidence intervals for
+*r̂*<sup>2</sup> and log (*β̂*<sub>0</sub> \* *β̂*<sub>1</sub>)**
+
+``` r
+weather_df5 = 
+  weather_df4 %>%
+  select(r.squared, logb0b1)
+sapply(weather_df5, function(x) quantile(x, probs = c(0.025, 0.975))) %>%
+  knitr::kable()
+```
+
+|       | r.squared |  logb0b1 |
+|:------|----------:|---------:|
+| 2.5%  | 0.8938410 | 1.964572 |
+| 97.5% | 0.9275271 | 2.059126 |
+
+The 95% CI for *r̂*<sup>2</sup> is (0.8938, 0.9275).
+
+The 95% CI for log (*β̂*<sub>0</sub> \* *β̂*<sub>1</sub>) is (1.9646,
+2.0591).
